src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');

html {
    height: 100%;
    margin: 0;
}

body {
    font-family: Rubik, sans-serif;
    height: 100%;
    background-color: #e3f2fd;
    margin: 0;
    overflow-y: hidden;

    .cdk-overlay-container {
        z-index: 3;
        position: absolute;
        top: 0;
        display: flex;
        height: 100%;
        width: 100%;
        background-color: rgba(112, 112, 112, 0.5);
        .cdk-global-overlay-wrapper {
            height: 100%;
            width: 100%;
            .custom-dialog-style {
                width: 100%;
                display: flex;
                justify-content: center;
                align-items: center;
                .mat-mdc-dialog-container {
                    display: flex;
                    justify-content: center;
                    .mat-mdc-dialog-surface {
                        background-color: transparent;
                        box-shadow: none;
                        top: 20vh;
                        &.mdc-dialog__surface {
                            overflow: hidden !important;
                        }
                    }
                }
            }
        }
    }
    
    .validateErrorWrapper {
        width: 100%;
        text-align: right;
        font-size: 12px;
        line-height: 20px;
        transform: translateY(-30%);
        -webkit-transform: translateY(-30%);
        animation: slide-out 0.5s forwards;
        -webkit-animation: slide-out 0.5s forwards;
        height: 20px;
        mat-error {
            visibility: hidden;
        }
        &.show {
            animation: slide-in 0.5s forwards;
            -webkit-animation: slide-in 0.5s forwards;
            mat-error {
                color: red;
                visibility: visible;
            }
        }
    }
}

